Add JVM flag to enable native access for SQLite